amendments to record geomap